@@ -1,17 +1,16 @@
-# $NetBSD: Makefile,v 1.5 2019/04/07 12:58:15 wen Exp $
+# $NetBSD: Makefile,v 1.6 2019/07/31 15:43:27 brook Exp $
 
-CATEGORIES=	devel
+CATEGORIES=	devel R
 
 MAINTAINER=	minskim@NetBSD.org
 HOMEPAGE=	http://rlang.tidyverse.org/
-COMMENT=	Functions for base types, core R and Tidyverse features
+COMMENT=	Functions for base types and core R and 'Tidyverse' features
 LICENSE=	gnu-gpl-v3
 
 R_PKGNAME=	rlang
-R_PKGVER=	0.3.4
+R_PKGVER=	0.4.0
 
 USE_LANGUAGES=	c
 
-BUILDLINK_API_DEPENDS.R+=	R>=3.1.0
 .include "../../math/R/Makefile.extension"
 .include "../../mk/bsd.pkg.mk"
